# osu-network-accel

./: .gitignore  AccelService.cs  Cargo.toml  MainForm.cs  OsuNetworkAccel.csproj  Program.cs  README.md  app.manifest  build.rs  publish-win-x64.bat  publish-win-x64.ps1
.github/workflows/: release.yml
packaging/: accelerate-osu-network.bat  restore-osu-network.bat
src/: main.rs  service.rs
