[package]
name = "osu-network-accel"
version = "1.0.0"
edition = "2021"
description = "osu! Network Accel"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
native-tls = "0.2"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
